New in version 1.2.1 (XXX 2009)
 * Provide optional Penn-Treebank-compatible POS tagging.
 * Bug fixes for misc mis-identified POS tags
 * Bug fix for mis-identified advmod relation.
 * Improved word features, including comparative, superlative tagging, etc.

New in version 1.2.0 (12 October 2009)
 * Fixes DocSpliter fallback to behave when it is misconfigured.
 * Fixes for anaphora resolution; head-word was missing or mis-identified.
 * Fix crash when the distributed parser (remote parser) returns null.
 * Don't print the phrase string in the OpenCog server, it messes the output!
 * Fix issuing of _amod when superlative modifier is involved.
 * Fix OpenCog Frame output to include truth values (Fabricio)
 * Change OpenCog Frame output to hold frame references (Fabricio)
 * Frames: add new concept vars and production rules. (Fabricio)
 * Use PrepositionalRelationNode in OpenCog prep relation output.
 * Tag verbs of questions as hypothetical.
 * Explicitly identify "filler subjects" aka "expletives"
 * Identify parataxis clauses.
 * Sort parses into ranked order.
 * Remove % from _%quantity relation name.
 * Remove garbage generated for certain prepositional sentences.
 * Remove garbage generated for certain questions, e.g. "Where is the ball?"
 * Fix cases where direct, indirect object reversed.
 * Fix handling of future tense in certain cases.
 * Fix faulty printing of certain numeric quantities.
 * Fix bug with multiple _predadj in one sentence.
 * Add a prototype Stanford-parser compatibility mode.

New in version 1.1.0 (2 July 2009)
 * Fix crash when generating scheme frames for opencog.
 * Distinct anaphora histories for distinct conversation streams. 
 * Fix extents calculation in lexical chunker code.
 * Requires new Java interfaces in link-grammar version 4.5.8

New in version 1.0.0 (17 June 2009)
 * Add "ant help" and "ant javadoc" build targets
 * Upgrade to opennlp-1.4.3, maxent-2.5.2
 * Move the old, deprecated parser API to parser-old.